On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Cyber.html
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -99,7 +99,7 @@
     <div class="DebutDeLafin"></div>
     <section class="section1_de_la_page">
         <header>
-            <h1>Bienvenue Dans la partie cyber</h1>
+            <h1 title=" 👋 ">Bienvenue Dans la partie cyber</h1>
             <h3 hidden>patience c'est en cours</h3>
             <h4 hidden>merci</h4>
         </header>
@@ -108,7 +108,7 @@
         <h4 hidden>merci</h4>
         
         <details>
-            <summary>Le Menu du jour / (Table of Contents) :  </summary>
+            <summary title=" 📜 Sommaire de la page ">Le Menu du jour / (Table of Contents) :  </summary>
             <nav>
                 <h2>Cybersécurité : </h2>
                 <ul>
