On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -242,7 +242,19 @@
         Red_RSA("inputBody3.024", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.025", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.026", pubkeyRed3, privkeyRed3,false);
-        // Red_RSA("inputBody3.027", pubkeyRed3, privkeyRed3,true);
+        
+        Red_RSA("inputBody3.027", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.028", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.029", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.030", pubkeyRed3, privkeyRed3,true);
+
+        Red_RSA("inputBody3.031", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.032", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.033", pubkeyRed3, privkeyRed3,true);
+        // Red_RSA("inputBody3.035", pubkeyRed3, privkeyRed3,true);
+
+
+
     };
     MaFonctionPrincipaleQuiAttend()
 </script>
