On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

Changes not staged for commit:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -269,6 +269,8 @@
         Red_RSA("inputBody3.024", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.025", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.026", pubkeyRed3, privkeyRed3,false);
+        await delay(1000*_debug_Speed);
+        document.getElementsByClassName("ContentBody3.034")[0].hidden = true;
         
         Red_RSA("inputBody3.027", pubkeyRed3, privkeyRed3,true);
         Red_RSA("inputBody3.028", pubkeyRed3, privkeyRed3,true);
