On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

Changes not staged for commit:
	modified:   Cyber/Red Team/RedTeam.html

Date:      Fri Oct 18 10:34:33 2024 +0200

On branch main
Your branch is ahead of 'origin/main' by 2 commits.
  (use "git push" to publish your local commits)

Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

Changes not staged for commit:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -105,6 +105,7 @@
                         <!-- <li><a href="#Item1_Kali">Kali Linux</a></li>
                         <li><a href="#Item2Cryptographie">Cryptographie</a></li>
                         <li><a href="#Item3">Item 3</a></li> -->
+                        <span id="inputBody3.036"><li><a href="#Tor">Tor</a></li></span>
                     </ul>
                 </nav>
             </details>
