On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

Changes not staged for commit:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -292,7 +292,7 @@
         Red_RSA("inputBody3.035", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.036", pubkeyRed3, privkeyRed3,false);
         await delay(500*_debug_Speed);
-        // Red_RSA("inputBody3.037", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.037", pubkeyRed3, privkeyRed3,true);
         // Red_RSA("inputBody3.038", pubkeyRed3, privkeyRed3,true);
         
         
