"Uncommented Red_RSA call for 'inputBody3.039' and left 'inputBody3.040' commented out."

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -300,7 +300,7 @@
         await delay(500*_debug_Speed);
         Red_RSA("inputBody3.037", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.038", pubkeyRed3, privkeyRed3,false);
-        // Red_RSA("inputBody3.039", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.039", pubkeyRed3, privkeyRed3,true);
         // Red_RSA("inputBody3.040", pubkeyRed3, privkeyRed3,true);
         
         
