On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -308,17 +308,29 @@
         Red_RSA("inputBody3.035", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.036", pubkeyRed3, privkeyRed3,false);
         await delay(500*_debug_Speed);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.037", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.038", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.039", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.040", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.041", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.042", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.043", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.044", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.045", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.046", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.047", pubkeyRed3, privkeyRed3,false);
+        await delay(50*_debug_Speed);
         Red_RSA("inputBody3.048", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.049", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.050", pubkeyRed3, privkeyRed3,false);
