On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

Changes not staged for commit:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -337,6 +337,8 @@
         Red_RSA("inputBody3.051", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.052", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.053", pubkeyRed3, privkeyRed3,false);
+        Red_RSA("inputBody3.081", pubkeyRed3, privkeyRed3,false);
+        Red_RSA("inputBody3.082", pubkeyRed3, privkeyRed3,false);
         await delay(500*_debug_Speed);
         Red_RSA("inputBody3.054", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.055", pubkeyRed3, privkeyRed3,false);
@@ -365,11 +367,9 @@
         Red_RSA("inputBody3.078", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.079", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.080", pubkeyRed3, privkeyRed3,false);
-        Red_RSA("inputBody3.081", pubkeyRed3, privkeyRed3,true);
-        Red_RSA("inputBody3.082", pubkeyRed3, privkeyRed3,true);
-        Red_RSA("inputBody3.083", pubkeyRed3, privkeyRed3,true);
-        Red_RSA("inputBody3.084", pubkeyRed3, privkeyRed3,true);
-        Red_RSA("inputBody3.085", pubkeyRed3, privkeyRed3,true);
+        Red_RSA("inputBody3.083", pubkeyRed3, privkeyRed3,false);
+        Red_RSA("inputBody3.084", pubkeyRed3, privkeyRed3,false);
+        Red_RSA("inputBody3.085", pubkeyRed3, privkeyRed3,false);
         // Red_RSA("inputBody3.086", pubkeyRed3, privkeyRed3,true);
         
         
