Smoother decryption On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Cyber/Red Team/RedTeam.html

--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -393,31 +393,42 @@
         Red_RSA("inputBody3.055", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.056", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.057", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.058", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.059", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.060", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.061", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.062", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.063", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.064", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.065", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.066", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.067", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.068", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.069", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.070", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.071", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.072", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.073", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.074", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.075", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.076", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.077", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.078", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.079", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.080", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.083", pubkeyRed3, privkeyRed3,false);
         Red_RSA("inputBody3.084", pubkeyRed3, privkeyRed3,false);
+        await delay(5*_debug_Speed);
         Red_RSA("inputBody3.085", pubkeyRed3, privkeyRed3,false);
         // Red_RSA("inputBody3.086", pubkeyRed3, privkeyRed3,true);
         
