"Updated window.location.replace URL in BlueTeam.html script"

--- a/Cyber/Blue Team/BlueTeam.html
+++ b/Cyber/Blue Team/BlueTeam.html
@@ -16,7 +16,7 @@
         document.title  = " |" + page + "| Raykesh: Bienvenue dans mon protfolio. ";
         console.log(" Le titre de la page est : " + document.title);
         console.log( page );
-        window.location.replace("https://raykesh-soneka.github.io/Portfolio/Le_Site_De_Raykesh");
+        window.location.replace("https://github.com/Raykesh-Soneka/Portfolio/tree/main/Cyber/Blue%20Team");
     </script>
 </head>
 <body>
