--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -31,7 +31,7 @@
         <!-- ul>(a>li)*3 -->
         <ul>
             <li> Mes Projet </li>
-            <li><a href= "" title="Liens LinkedIn contenant un site (nécessite une connexion)" rel="noopener noreferrer" > Curriculum vitæ </a></li>
+            <li><a href= "https://www.linkedin.com/in/raykesh-ravirooban-5a8b44230/overlay/contact-info/" title="Liens LinkedIn contenant un site (nécessite une connexion)" rel="noopener noreferrer" > Curriculum vitæ </a></li>
             <li><a href= "AboutMe.html" title="About Me" rel="noopener noreferrer" > About Me </a></li>
         </ul>
         
