On branch main Your branch is ahead of 'origin/main' by 5 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/Cyber.html

--- a/Cyber/Cyber.html
+++ b/Cyber/Cyber.html
@@ -158,7 +158,7 @@ Permet de voir le contenu (<strong style="font-size: 1.5em;">l</strong><span sty
     <code class="Option"><span class="OneLetterOption">-A,</span> --almost-all</code>       : <span class="descriptionOption">pour presque affichez tout (notamment les fichiers cachés sans afficher . et .. qui représente respectivement le répertoire courant et le répertoire parent )</span>
     <code class="Option helpDoc"><span class="OneLetterOption">   </span> --help</code>             : <span class="descriptionOption">pour affichez la documentation de base de la commande</span>
     <code class="Option"><span class="OneLetterOption">-R,</span> --recursive</code>        : <span class="descriptionOption">pour affichez récursivement le contenu du répertoire courant et des sous-répertoires</span>
-    <code class="Option"><span class="OneLetterOption">-s,</span> --size</code>             : <span class="descriptionOption">pour affichez la taille des fichier</span>
+    <code class="Option"><span class="OneLetterOption">-s,</span> --size</code>             : <span class="descriptionOption">pour affichez la taille des fichiers</span>
     <span class="Utilisation">Utilisation</span> : ls <span class="Option">[<span class="OneLetterOption">O</span>PTION]...</span> [<span class="fichier">FICHIER</span>]...
     <span class="Exemple">Example</span> : 
         Le fichier peut être un répertoire : 
