On branch main Your branch is ahead of 'origin/main' by 9 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   AboutMe.html

--- a/AboutMe.html
+++ b/AboutMe.html
@@ -41,7 +41,7 @@
 </head>
 <body>
     <p>About Me : </p>
-    Je suis Raykesh, j'ai créé ce site. ici vous trouverez le lien vers la partie cybersécurité. elle est un peu caché pour des questions de sécurités. 
+    Je suis Raykesh, j'ai créé ce site. Ici, vous trouverez le lien vers la partie cybersécurité. Elle est un peu cachée pour des questions de sécurité. 
     à SUIVRE...
     <ul><a href="Le_Site_De_Raykesh.html" rel="noopener noreferrer" title="Page Principale"><li> Home      </li></a></ul>
     <ul><a href="Cyber/Cyber.html" rel="noopener noreferrer" title="êtes vous sûr? êtes vous sûr de vouloir cliquer?" style="cursor: not-allowed;"><li> Cyber      </li></a></ul>
