--- a/Cyber/Red Team/RedTeam.html
+++ b/Cyber/Red Team/RedTeam.html
@@ -294,7 +294,7 @@
     const delay = ms => new Promise(res => setTimeout(res, ms));
     async function MaFonctionPrincipaleQuiAttend() {
         // main  
-        var _debug_Speed = 0.01; // Set to 1
+        var _debug_Speed = 1; // Set to 1 for prod and 0.01 for dev
         await delay(1000*_debug_Speed);
         console.log("Waited 1s");
         await delay(1500*_debug_Speed);
