On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Le_Site_De_Raykesh.html

--- a/Le_Site_De_Raykesh.html
+++ b/Le_Site_De_Raykesh.html
@@ -42,9 +42,9 @@
 
             <h1>Bonjours,</h1>
             <p>
-                Bienvenue dans mon site, ce site est un Portfolio réaliser par Raykesh. Vous êtes actuellement sur mon site. Il y a une barre de navigation
-                en haut avec des onglets qui feront une redirection. Si certaine fonctionalités ne marchent pas encore, c'est qu'elle sont en maintenance 
-                et seront disponible très bientôt donc patience.
+                Bienvenue dans mon site, ce site est un portfolio réalisé par Raykesh. Vous êtes actuellement sur mon site. Il y a une barre de navigation
+                en haut avec des onglets qui feront une redirection. Si certaines fonctionnalités ne marchent pas encore, c'est qu'elles sont en maintenance 
+                et seront disponibles très bientôt, donc patience.
             </p>
         </header>
         <section class="imageNumeroUn">
