On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -115,7 +115,7 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p> <!-- TODO -->
-                        <a href="#" title="Pour des raisons d'éthique, ce projet n'a pas de code source accessible mais il y a des détails sur mon LinkedIn">Plus de détails</a>
+                        <a href="#" title="Pour des raisons d'éthique, ce projet n'a pas de code source accessible, mais il y a des détails sur mon LinkedIn">Plus de détails</a>
                 </div>
             </div>
         </div>
