On branch main Your branch is ahead of 'origin/main' by 2 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Cyber/templateCyber.html

--- a/Cyber/templateCyber.html
+++ b/Cyber/templateCyber.html
@@ -62,9 +62,9 @@
                 patience c'est en cours
             </p>
             <p>
-                cette partie du site est consacrée à la cybersécurité. Vous êtes actuellement sur mon site. Il y a une barre de navigation
-                en haut avec des onglets qui feront une redirection vers la partie cyber. Si certaine fonctionalités ne marchent pas encore, c'est qu'elle sont en maintenance 
-                et seront disponible très bientôt donc patience.
+                Cette partie du site est consacrée à la cybersécurité. Vous êtes actuellement sur mon site. Il y a une barre de navigation
+                en haut avec des onglets qui feront une redirection vers la partie cyber. Si certaines fonctionnalités ne marchent pas encore, c'est qu'elles sont en maintenance 
+                et seront disponibles très bientôt, donc patience.
             </p>
         </header>
         <h1>Raykesh</h1>
