--- a/Projet.html
+++ b/Projet.html
@@ -15,6 +15,7 @@
         position: relative;
         display: flex;
         justify-content: space-between;
+        flex-wrap: wrap;
     
 
         .card{
