"Removed duplicate card elements and added title attribute to 'Read More' links."

--- a/Projet.html
+++ b/Projet.html
@@ -181,7 +181,7 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                        <a href="#">Read More</a>
+                    <a href="#" title="">Read More</a>
                 </div>
             </div>
         </div>
