On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -204,14 +204,14 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
-                    <h3>TODO</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/e/e5/Gospers_glider_gun.gif" title="Wiki">
+                    <h3>jeu de la vie</h3>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Jeu de la vie (Conway's Game of Life) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles.</p>
+                    <a href="https://fr.wikipedia.org/wiki/Jeu_de_la_vie" title="wiki Jeu_de_la_vie (Fr)">Read More</a>
                 </div>
             </div>
         </div>
