--- a/Projet.html
+++ b/Projet.html
@@ -189,14 +189,14 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
-                    <h3>TODO</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/a/a3/MulticolorLangtonsAnt.gif/330px-MulticolorLangtonsAnt.gif" title="Wiki">
+                    <h3>Fourmi de Langeton</h3>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Fourmi de Langton (Langton's ant) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles.</p>
+                    <a href="https://fr.wikipedia.org/wiki/Fourmi_de_Langton" title="wiki Fourmi_de_Langton (Fr)">Read More</a>
                 </div>
             </div>
         </div>
