On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -136,7 +136,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p> <!-- TODO -->
+                    <p>Crackeur de Fichier ZIP utilisant du multiprocessing pour faire une attaque par dictionnaire avec le dictionnaire rockyou. Le mot de passe était composé de 2 mots de rockyou séparés par un espace.</p> <!-- TODO -->
                     <a href="#" title="Pour des raisons d'éthique, ce projet n'a pas de code source accessible, mais il y a des détails sur mon LinkedIn">Plus de détails</a>
                 </div>
             </div>
