On branch main Your branch is ahead of 'origin/main' by 2 commits.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -174,14 +174,14 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
-                    <h3>TODO</h3>
+                    <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/6/67/DragonCurve_animation.gif/330px-DragonCurve_animation.gif" title="Wiki">
+                    <h3>Courbe du dragon</h3>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Courbe du dragon (Dragon curve), fractale du dragon ou courbe de Heighway. Il s'agit de plier une feuille en 2, puis en 2(chaque partie plate) et ainsi de suite. J'ai fait une version en Python qui est récursive.</p>
+                    <a href="https://fr.wikipedia.org/wiki/Courbe_du_dragon" title="wiki Courbe_du_dragon (Fr)">Read More</a>
                 </div>
             </div>
         </div>
