"Updated project descriptions and links in Projet.html"

--- a/Projet.html
+++ b/Projet.html
@@ -210,7 +210,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Jeu de la vie (Conway's Game of Life) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles.</p>
+                    <p>Jeu de la vie (Conway's Game of Life) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles.  (Python ...)</p>
                     <a href="https://fr.wikipedia.org/wiki/Jeu_de_la_vie" title="wiki Jeu_de_la_vie (Fr)">Read More</a>
                 </div>
             </div>
