"Updated project descriptions and links in Projet.html"

--- a/Projet.html
+++ b/Projet.html
@@ -195,7 +195,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Fourmi de Langton (Langton's ant) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles.</p>
+                    <p>Fourmi de Langton (Langton's ant) est un automate cellulaire. J'ai codé une version personnalisée qui suit les règles. (Python ...)</p>
                     <a href="https://fr.wikipedia.org/wiki/Fourmi_de_Langton" title="wiki Fourmi_de_Langton (Fr)">Read More</a>
                 </div>
             </div>
