--- a/Projet.html
+++ b/Projet.html
@@ -180,7 +180,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Courbe du dragon (Dragon curve), fractale du dragon ou courbe de Heighway. Il s'agit de plier une feuille en 2, puis en 2(chaque partie plate) et ainsi de suite. J'ai fait une version en Python qui est récursive.</p>
+                    <p>Courbe du dragon (Dragon curve), fractale du dragon ou courbe de Heighway. Il s'agit de plier une feuille en 2, puis en 2(chaque partie plate) et ainsi de suite. J'ai fait une version en Python qui est récursive. (Python/Turtle, Java, ...)</p>
                     <a href="https://fr.wikipedia.org/wiki/Courbe_du_dragon" title="wiki Courbe_du_dragon (Fr)">Read More</a>
                 </div>
             </div>
