--- a/Projet.html
+++ b/Projet.html
@@ -165,8 +165,9 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Site portfolio avec une partie cybersécurité, une partie red teams, une partie blue teams, une partie projet ... (HTML5, CSS3, Python, JavaScript, ...)</p>
+                    <a href="https://raykesh-soneka.github.io/Portfolio/" title="site">see More</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio" title="Repo GitHub">Read More (code)</a>
                 </div>
             </div>
         </div>
