--- a/Projet.html
+++ b/Projet.html
@@ -160,7 +160,7 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="">
-                    <h3>TODO</h3>
+                    <h3>Site Portfolio</h3>
                 </div>
             </div>
             <div class="face description">
