--- a/Projet.html
+++ b/Projet.html
@@ -168,7 +168,7 @@
                     <p>Site portfolio avec une partie cybersécurité, une partie red teams, une partie blue teams, une partie projet ... (HTML5, CSS3, Python, JavaScript, ...)</p>
                     <a href="https://raykesh-soneka.github.io/Portfolio/" title="site">see More</a>
                     <a href="https://github.com/Raykesh-Soneka/Portfolio" title="Repo GitHub">Read More (code)</a>
-                    <p>cliquer sur le premier bouton pour revenir à la page précédente (home)</p>
+                    <p style="font-size: 0.75rem;">cliquer sur le premier bouton pour revenir à la page précédente (home)</p>
                 </div>
             </div>
         </div>
