On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -222,13 +222,13 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="">
-                    <h3>TODO</h3>
+                    <h3>Générateur de Mots de passe</h3>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
                     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <a href="./Cyber/Blue Team/generateurDeMDP.py" title="GénérateurDeMDP">Code</a>
                 </div>
             </div>
         </div>
