On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -227,7 +227,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
+                    <p>J'ai créé un générateur de mots de passe utilisant du pseudo-aléatoire cryptographiquement fort. (Python ...)</p>
                     <a href="./Cyber/Blue Team/generateurDeMDP.py" title="GénérateurDeMDP">Code</a>
                 </div>
             </div>
