On branch main Your branch is ahead of 'origin/main' by 1 commit.   (use "git push" to publish your local commits)
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -227,7 +227,7 @@
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>J'ai créé un générateur de mots de passe utilisant du pseudo-aléatoire cryptographiquement fort. (Python ...)</p>
+                    <p>J'ai créé un générateur de mots de passe utilisant du pseudo-aléatoire cryptographiquement fort. J'ai aussi créé un générateur de phrases de passe. (Python ...)</p>
                     <a href="./Cyber/Blue Team/generateurDeMDP.py" title="GénérateurDeMDP">Code</a>
                 </div>
             </div>
