--- a/Projet.html
+++ b/Projet.html
@@ -228,7 +228,8 @@
             <div class="face description">
                 <div class="contenu">
                     <p>J'ai créé un générateur de mots de passe utilisant du pseudo-aléatoire cryptographiquement fort. J'ai aussi créé un générateur de phrases de passe. (Python ...)</p>
-                    <a href="./Cyber/Blue Team/generateurDeMDP.py" title="GénérateurDeMDP">Code</a>
+                    <a href="./Cyber/Blue Team/generateurDeMDP.py" title="Télécharger GénérateurDeMDP.py">Télécharger</a>
+                    <a href="https://github.com/Raykesh-Soneka/Portfolio/blob/main/Cyber/Blue%20Team/generateurDeMDP.py" title="GénérateurDeMDP">Code</a>
                 </div>
             </div>
         </div>
