On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html
	new file:   images/MDPGenerer.png

--- a/Projet.html
+++ b/Projet.html
@@ -18,6 +18,9 @@
         // console.log(" Le titre de la page est : " + document.title);
         // console.log( page );
     </script>
+    <title>Bienvenue dans le protfolio de Raykesh : Voici les projets que j'ai réalisés </title>
+    <meta name="author" content="Raykesh" />
+    <meta name="keywords" content="HTML, CSS, JavaScript, Projet">
 </head>
 <style>
     body{
@@ -221,7 +224,7 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
+                    <img src="./images/MDPGenerer.png">
                     <h3>Générateur de Mots de passe</h3>
                 </div>
             </div>
