On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -224,7 +224,7 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="./images/MDPGenerer.png">
+                    <img src="./images/MDPGenerer.png" style="max-width: 290px;">
                     <h3>Générateur de Mots de passe</h3>
                 </div>
             </div>
