On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -169,7 +169,7 @@
             <div class="face description">
                 <div class="contenu">
                     <p>Site portfolio avec une partie cybersécurité, une partie red teams, une partie blue teams, une partie projet ... (HTML5, CSS3, Python, JavaScript, ...)</p>
-                    <a href="https://raykesh-soneka.github.io/Portfolio/" title="site">see More</a>
+                    <a href="https://raykesh-soneka.github.io/Portfolio/" title="site">see More (Site)</a>
                     <a href="https://github.com/Raykesh-Soneka/Portfolio" title="Repo GitHub">Read More (code)</a>
                     <p style="font-size: 0.75rem;">cliquer sur le premier bouton pour revenir à la page précédente (home)</p>
                 </div>
