On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -91,6 +91,14 @@
             font-size: 1.5em;
         }
         
+        .card .face.projet .contenu h5{
+            margin: 10px 0 0;
+            padding: 0;
+            color: #fff000; /* #ff0 */
+            text-align: center;
+            font-size: 0.5em;
+        }
+        
         .card .face.description{
             position: relative;
             background: #fff;
@@ -135,6 +143,7 @@
                 <div class="contenu">
                     <img src="https://upload.wikimedia.org/wikipedia/commons/thumb/c/c3/Python-logo-notext.svg/1869px-Python-logo-notext.svg.png">
                     <h3>Crackeur de Fichier ZIP</h3>
+                    <h5>★★★★★</h5>
                 </div>
             </div>
             <div class="face description">
