Added "overflow: hidden;" to #Zoom CSS rule.

--- a/Projet.html
+++ b/Projet.html
@@ -136,6 +136,7 @@
         }
     }
     #Zoom {
+        overflow: hidden;
         background-image: url(./images/MDPGenerer.png);
         width: 2900000px;
         height: 20px;
