On branch main Your branch is up to date with 'origin/main'.
Changes to be committed:
	modified:   Projet.html

--- a/Projet.html
+++ b/Projet.html
@@ -45,6 +45,7 @@
         .card{
             position: relative;
             cursor: pointer;
+            font-size: 0.9rem;
         }
         
         .card .face{
@@ -189,7 +190,7 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="./images/Site.png">
-                    <h3 style="font-size: 0.95rem;">Site Portfolio / Retour en arrière</h3>
+                    <h3 style="font-size: 0.85rem;">Site Portfolio / Retour en arrière</h3>
                     <h5>★★★★★</h5>
                 </div>
             </div>
