"Updated project description and link in Projet.html"

--- a/Projet.html
+++ b/Projet.html
@@ -292,14 +292,15 @@
             <div class="face projet">
                 <div class="contenu">
                     <img src="">
-                    <h3>TODO</h3>
-                    <!-- <h5>★★★★★</h5> -->
+                    <h3>Ancien site portfolio</h3>
+                    <h5>★</h5>
                 </div>
             </div>
             <div class="face description">
                 <div class="contenu">
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quas cum cumque minus iste veritatis provident at.</p>
-                    <a href="#" title="">Read More</a>
+                    <p>Il s'agit d'un site antérieur avec une mise en page colorée. (Aucun bouton de retour n'est disponible dans ce site.)</p>
+                    <a href="https://raykeshr.github.io/raykesh.github.io/" title="site">see More (Site)</a>
+                    <a href="https://github.com/RaykeshR/raykesh.github.io" title="Repo GitHub">Read More (code)</a>
                 </div>
             </div>
         </div>
