"Updated image source and added style to img tag in projet card"

--- a/Projet.html
+++ b/Projet.html
@@ -291,7 +291,7 @@
         <div class="card">
             <div class="face projet">
                 <div class="contenu">
-                    <img src="">
+                    <img src="./images/Site2.png" style="max-width: 225px;">
                     <h3>Ancien site portfolio</h3>
                     <h5>★</h5>
                 </div>
